Update product name in index.html

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                         total: parseFloat(total),
                         itens: [{
                             id: 'pdf-001',
-                            nome: 'E-book Criação de PDF',
+                            nome: 'PDF misterioso',
                             qtd: quantidade,
                             preco: precoUnitario
                         }]
