--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Comprar E-book: Criação de PDF - Barraca do Ari</title>
+    <title>Comprar PDF Misterioso - Barraca do Ari</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
         :root {
@@ -46,7 +46,7 @@
             <div class="flex flex-col md:flex-row gap-6 items-center mb-6">
                 <img src="https://placehold.co/400x400?text=PDF+Expert" alt="Capa do PDF" class="w-32 h-32 rounded-lg object-cover shadow-sm">
                 <div>
-                    <h2 class="text-xl font-bold text-slate-800">E-book:Pdf Misterioso</h2>
+                    <h2 class="text-xl font-bold text-slate-800">PDF Misterioso</h2>
                     <p class="text-slate-600 text-sm"> Pode ser qualquer coisa! </p>
                     <p class="text-blue-600 font-bold text-lg mt-2">R$ 2,00 <span class="text-xs text-slate-400 font-normal">/ unidade</span></p>
                 </div>
