--- a/index.html
+++ b/index.html
@@ -1,1 +1,202 @@
 
+<!DOCTYPE html>
+<html class="dark" lang="pt-BR">
+<head>
+    <meta charset="utf-8"/>
+    <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
+    <title>Aristidesbp | Digital Solutions</title>
+    <script src="https://cdn.tailwindcss.com?plugins=forms,container-queries"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;900&display=swap" rel="stylesheet"/>
+    <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:wght,FILL@100..700,0..1&display=swap" rel="stylesheet"/>
+    <script id="tailwind-config">
+        tailwind.config = {
+            darkMode: "class",
+            theme: {
+                extend: {
+                    colors: {
+                        "primary": "#2563eb",
+                        "background-light": "#f6f6f8",
+                        "background-dark": "#020617",
+                        "slate-border": "#1e293b",
+                    },
+                    fontFamily: { "display": ["Inter", "sans-serif"] },
+                },
+            },
+        }
+    </script>
+    <style type="text/tailwindcss">
+        @layer components {
+            .glass {
+                backdrop-filter: blur(12px);
+                -webkit-backdrop-filter: blur(12px);
+                background: rgba(15, 23, 42, 0.6);
+                border: 1px solid rgba(255, 255, 255, 0.1);
+            }
+            .dark .glass { background: rgba(15, 23, 42, 0.6); }
+            .light .glass { background: rgba(255, 255, 255, 0.7); border: 1px solid rgba(0, 0, 0, 0.1); }
+        }
+        .light body { background-color: #f6f6f8; color: #1e293b; }
+        .light .service-card { background: white; border-color: #e2e8f0; }
+        .service-card:hover { border-color: #2563eb; transform: translateY(-4px); }
+    </style>
+</head>
+<body class="bg-background-light dark:bg-background-dark text-[#f8fafc] dark:text-[#f8fafc] font-display transition-colors duration-300">
+
+<header class="fixed top-0 left-0 right-0 z-50 glass border-b border-slate-border px-6 md:px-16 py-3">
+    <div class="max-w-7xl mx-auto flex items-center justify-between">
+        <div class="flex items-center gap-3">
+            <div class="size-8 bg-primary rounded-lg flex items-center justify-center text-white">
+                <span class="material-symbols-outlined">code</span>
+            </div>
+            <h1 class="text-xl font-black tracking-tight uppercase">Aristidesbp</h1>
+        </div>
+        <nav class="hidden md:flex items-center gap-10 text-slate-300">
+            <a class="text-sm font-medium hover:text-primary transition-colors" href="#home">Início</a>
+            <a class="text-sm font-medium hover:text-primary transition-colors" href="#about">Sobre</a>
+            <a class="text-sm font-medium hover:text-primary transition-colors" href="#services">Serviços</a>
+        </nav>
+        <div class="flex items-center gap-3">
+            <button onclick="toggleTheme()" class="p-2 rounded-lg bg-slate-800 border border-slate-border hover:bg-slate-700 transition-all">
+                <span id="themeIcon" class="material-symbols-outlined text-white text-sm">light_mode</span>
+            </button>
+            <select id="langSelect" onchange="changeLang()" class="bg-slate-800 border-slate-border text-white text-xs font-bold rounded-lg py-1.5 focus:ring-0 cursor-pointer">
+                <option value="pt">PT-BR</option>
+                <option value="es">ES-ES</option>
+            </select>
+        </div>
+    </div>
+</header>
+
+<main class="pt-20">
+    <section class="relative min-h-[80vh] flex items-center justify-center px-4 overflow-hidden" id="home">
+        <div class="relative z-10 max-w-4xl text-center flex flex-col items-center gap-8">
+            <div class="inline-flex items-center gap-2 px-4 py-1.5 rounded-full glass border border-primary/30 text-primary text-[10px] font-bold uppercase tracking-widest">
+                Disponível para Projetos 2026
+            </div>
+            <h1 class="text-4xl md:text-7xl font-black leading-[1.1] tracking-tight" id="heroTitle">
+                Transformando Necessidades Reais em <span class="text-primary">Soluções Digitais</span> Funcionais
+            </h1>
+            <p class="text-lg md:text-xl text-slate-400 max-w-2xl" id="heroDesc">
+                Analista de Sistemas e Programador com foco em resultados práticos e eficiência digital.
+            </p>
+            <div class="flex flex-col sm:row gap-4 mt-4">
+                <a class="px-8 py-4 bg-primary hover:bg-primary/90 text-white font-bold rounded-xl transition-all shadow-lg shadow-primary/25" href="#services">Explorar Serviços</a>
+                <a class="px-8 py-4 glass hover:bg-white/5 font-bold rounded-xl transition-all border border-slate-border" href="#about">Saiba Mais Sobre Mim</a>
+            </div>
+        </div>
+    </section>
+
+    <section class="py-24 px-6 md:px-16" id="about">
+        <div class="max-w-7xl mx-auto grid md:grid-cols-2 gap-16 items-center">
+            <div class="aspect-square rounded-2xl overflow-hidden bg-slate-800 border border-slate-border shadow-2xl">
+                <div class="w-full h-full bg-cover bg-center" style="background-image: url('https://images.unsplash.com/photo-1498050108023-c5249f4df085?q=80&w=1000&auto=format&fit=crop');"></div>
+            </div>
+            <div class="flex flex-col gap-6">
+                <h2 class="text-3xl md:text-5xl font-bold" id="aboutTitle">Especialista em Tecnologia</h2>
+                <p class="text-slate-400 text-lg leading-relaxed" id="aboutText">
+                    Sou Aristides Barbosa Pontes. Atuo desde a concepção da ideia até a entrega final, garantindo que cada linha de código contribua para o crescimento real do seu negócio.
+                </p>
+                <div class="grid grid-cols-2 gap-4 mt-4">
+                    <div class="p-4 glass rounded-xl border-slate-border">
+                        <span class="text-primary font-black text-2xl block">+100%</span>
+                        <span class="text-xs uppercase text-slate-500 font-bold">Compromisso</span>
+                    </div>
+                    <div class="p-4 glass rounded-xl border-slate-border">
+                        <span class="text-primary font-black text-2xl block">Clean</span>
+                        <span class="text-xs uppercase text-slate-500 font-bold">Código Limpo</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="py-24 px-6 md:px-16" id="services">
+        <div class="max-w-7xl mx-auto">
+            <div class="text-center mb-16">
+                <h2 class="text-3xl md:text-5xl font-bold mb-4">Soluções Especializadas</h2>
+                <p class="text-slate-400">Invista na infraestrutura digital que seu negócio merece.</p>
+            </div>
+            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-6">
+                
+                <div class="service-card glass p-6 border border-slate-border rounded-xl flex flex-col transition-all">
+                    <span class="material-symbols-outlined text-primary text-4xl mb-4">developer_mode_tv</span>
+                    <h3 class="text-xl font-bold mb-2">Desenvolvimento Web</h3>
+                    <p class="text-slate-400 text-sm mb-6 flex-grow">Sistemas web personalizados e sites institucionais responsivos.</p>
+                    <div class="mt-auto">
+                        <div class="font-bold text-xl mb-4">R$ 3.500,00</div>
+                        <button onclick="irParaPagamento('Desenvolvimento_Web', 3500)" class="w-full py-3 bg-primary text-white rounded-lg text-xs font-black hover:bg-primary/80 transition-all uppercase tracking-wider">Contratar</button>
+                    </div>
+                </div>
+
+                <div class="service-card glass p-6 border border-slate-border rounded-xl flex flex-col transition-all">
+                    <span class="material-symbols-outlined text-primary text-4xl mb-4">query_stats</span>
+                    <h3 class="text-xl font-bold mb-2">Tráfego Pago</h3>
+                    <p class="text-slate-400 text-sm mb-6 flex-grow">Gestão estratégica de Google Ads e Meta Ads para conversão.</p>
+                    <div class="mt-auto">
+                        <div class="font-bold text-xl mb-4">R$ 1.500,00</div>
+                        <button onclick="irParaPagamento('Gestao_de_Trafego', 1500)" class="w-full py-3 bg-primary text-white rounded-lg text-xs font-black hover:bg-primary/80 transition-all uppercase tracking-wider">Contratar</button>
+                    </div>
+                </div>
+
+                <div class="service-card glass p-6 border border-slate-border rounded-xl flex flex-col transition-all">
+                    <span class="material-symbols-outlined text-primary text-4xl mb-4">terminal</span>
+                    <h3 class="text-xl font-bold mb-2">Consultoria Técnica</h3>
+                    <p class="text-slate-400 text-sm mb-6 flex-grow">Análise de sistemas e arquitetura de banco de dados.</p>
+                    <div class="mt-auto">
+                        <div class="font-bold text-xl mb-4">R$ 1.000,00</div>
+                        <button onclick="irParaPagamento('Consultoria_Tecnica', 1000)" class="w-full py-3 bg-primary text-white rounded-lg text-xs font-black hover:bg-primary/80 transition-all uppercase tracking-wider">Contratar</button>
+                    </div>
+                </div>
+
+                <div class="service-card glass p-6 border-primary bg-primary/5 rounded-xl flex flex-col transition-all">
+                    <span class="material-symbols-outlined text-primary text-4xl mb-4">picture_as_pdf</span>
+                    <h3 class="text-xl font-bold mb-2">PDF Misterioso</h3>
+                    <p class="text-slate-400 text-sm mb-6 flex-grow">Guia exclusivo de automação e integração digital.</p>
+                    <div class="mt-auto">
+                        <div class="font-bold text-primary text-xl mb-4">R$ 2,00</div>
+                        <button onclick="irParaPagamento('PDF_Misterioso', 2)" class="w-full py-3 bg-primary text-white rounded-lg text-xs font-black hover:bg-primary/80 transition-all uppercase tracking-wider">Comprar Agora</button>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </section>
+</main>
+
+<footer class="py-12 border-t border-slate-border px-6 md:px-16 text-center">
+    <p class="text-slate-500 text-sm">© 2026 Aristidesbp - Digital Solutions. Todos os direitos reservados.</p>
+</footer>
+
+<script>
+    // Sistema de Redirecionamento Universal
+    function irParaPagamento(servico, valor) {
+        window.location.href = `projetos/mercadopago_supabase/index.html?item=${servico}&valor=${valor}`;
+    }
+
+    function toggleTheme() {
+        const html = document.documentElement;
+        const icon = document.getElementById('themeIcon');
+        if (html.classList.contains('dark')) {
+            html.classList.remove('dark'); html.classList.add('light');
+            icon.innerText = 'dark_mode';
+        } else {
+            html.classList.remove('light'); html.classList.add('dark');
+            icon.innerText = 'light_mode';
+        }
+    }
+
+    function changeLang() {
+        const lang = document.getElementById('langSelect').value;
+        const title = document.getElementById('heroTitle');
+        const desc = document.getElementById('heroDesc');
+        if (lang === 'es') {
+            title.innerHTML = 'Transformando Necesidades Reales en <span class="text-primary">Soluciones Digitales</span>';
+            desc.innerText = 'Analista de Sistemas enfocado en resultados prácticos y eficiencia.';
+        } else {
+            title.innerHTML = 'Transformando Necessidades Reais em <span class="text-primary">Soluções Digitais</span> Funcionais';
+            desc.innerText = 'Analista de Sistemas e Programador com foco em resultados práticos e eficiência digital.';
+        }
+    }
+</script>
+</body>
+</html>
