--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
         <nav class="hidden md:flex items-center gap-10 text-slate-300">
             <a class="text-sm font-medium hover:text-primary transition-colors" href="#home">Início</a>
             <a class="text-sm font-medium hover:text-primary transition-colors" href="#about">Sobre</a>
+            <a class="text-sm font-medium hover:text-primary transition-colors" href="#about">PDFs</a>
             <a class="text-sm font-medium hover:text-primary transition-colors" href="#services">Serviços</a>
         </nav>
         <div class="flex items-center gap-3">
@@ -156,7 +157,7 @@
 
 
 
-    
+    <!--  meus serviços -->
     <section class="py-24 px-6 md:px-16" id="services">
         <div class="max-w-7xl mx-auto">
             <div class="text-center mb-16">
@@ -194,18 +195,14 @@
                         <button onclick="irParaPagamento('Consultoria_Tecnica', 1000)" class="w-full py-3 bg-primary text-white rounded-lg text-xs font-black hover:bg-primary/80 transition-all uppercase tracking-wider">Contratar</button>
                     </div>
                 </div>
-
-                <div class="service-card glass p-6 border-primary bg-primary/5 rounded-xl flex flex-col transition-all">
-                    <span class="material-symbols-outlined text-primary text-4xl mb-4">picture_as_pdf</span>
-                    <h3 class="text-xl font-bold mb-2">PDF Misterioso</h3>
-                    <p class="text-slate-400 text-sm mb-6 flex-grow">Guia exclusivo de automação e integração digital.</p>
-                    <div class="mt-auto">
-                        <div class="font-bold text-primary text-xl mb-4">R$ 2,00</div>
-                        <button onclick="irParaPagamento('PDF_Misterioso', 2)" class="w-full py-3 bg-primary text-white rounded-lg text-xs font-black hover:bg-primary/80 transition-all uppercase tracking-wider">Comprar Agora</button>
-                    </div>
-                </div>
-
             </div>
+
+
+
+
+
+
+            
         </div>
     </section>
 </main>
