--- a/index.html
+++ b/index.html
@@ -40,23 +40,9 @@
         .service-card:hover { border-color: #2563eb; transform: translateY(-4px); }
     </style>
 </head>
-<body class="bg-background-light dark:bg-background-dark text-[#f8fafc] dark:text-[#f8fafc] font-display transition-colors duration-300">
+<body class="bg-background-light dark:bg-background-dark text-[#f8fafc] dark:text-[#f8fafc] font-display transition-colors duration-300">      
 
-<header class="fixed top-0 left-0 right-0 z-50 glass border-b border-slate-border px-6 md:px-16 py-3">
-    <div class="max-w-7xl mx-auto flex items-center justify-between">
-        <div class="flex items-center gap-3">
-            <div class="size-8 bg-primary rounded-lg flex items-center justify-center text-white">
-                <span class="material-symbols-outlined">code</span>
-            </div>
-            <h1 class="text-xl font-black tracking-tight uppercase">Aristidesbp</h1>
-        </div>
-
-
-
-
-
-        
-
+    <!-- navbar -->
 <nav class="fixed w-full z-50 glass border-b border-gray-200 dark:border-slate-border">
     <div class="max-w-7xl mx-auto px-4 h-16 flex items-center justify-between">
         <div class="flex items-center gap-2">
@@ -87,10 +73,6 @@
         </div>
     </div>
 </nav>
-
-
-
-
 
 
         
