--- a/login.html
+++ b/login.html
@@ -14,7 +14,7 @@
         }
     </script>
 </head>
-<body class="bg-[#f6f8f7] dark:bg-bg-dark min-h-screen flex items-center justify-center p-4 font-['Inter']">
+<body class="bg-[#f6f8f7] dark:bg-bg-dark min-h-screen flex items-center justify-center p-4 font-['Inter'] transition-colors duration-300">
 
     <div class="w-full max-w-[420px] bg-white dark:bg-[#1a2920] rounded-2xl shadow-2xl overflow-hidden border border-gray-100 dark:border-white/5">
         <div class="p-8">
@@ -23,17 +23,17 @@
                     <span class="material-symbols-outlined text-primary text-4xl">storefront</span>
                 </div>
                 <h1 class="text-2xl font-black text-gray-900 dark:text-white uppercase tracking-tighter">ERP ABP</h1>
-                <p class="text-[#568f6c] text-sm mt-1">Gestão inteligente para supermercados</p>
+                <p class="text-[#568f6c] text-sm mt-1" id="txt_subtitle">Gestão inteligente para supermercados</p>
             </div>
 
             <form id="loginForm" class="space-y-5">
                 <div>
-                    <label class="block text-xs font-bold text-[#568f6c] uppercase mb-2">Usuário ou E-mail</label>
+                    <label class="block text-xs font-bold text-[#568f6c] uppercase mb-2">E-mail</label>
                     <div class="relative">
-                        <span class="material-symbols-outlined absolute left-3 top-3 text-gray-400 text-lg">person</span>
-                        <input type="text" id="user_login" required
-                            class="w-full pl-10 pr-4 py-3 bg-gray-50 dark:bg-white/5 border border-gray-200 dark:border-white/10 rounded-xl focus:ring-2 focus:ring-primary focus:border-transparent transition-all outline-none text-sm"
-                            placeholder="Seu usuário">
+                        <span class="material-symbols-outlined absolute left-3 top-3 text-gray-400 text-lg">mail</span>
+                        <input type="email" id="user_login" required
+                            class="w-full pl-10 pr-4 py-3 bg-gray-50 dark:bg-white/5 border border-gray-200 dark:border-white/10 rounded-xl focus:ring-2 focus:ring-primary focus:border-transparent transition-all outline-none text-sm dark:text-white"
+                            placeholder="exemplo@email.com">
                     </div>
                 </div>
 
@@ -42,47 +42,59 @@
                     <div class="relative">
                         <span class="material-symbols-outlined absolute left-3 top-3 text-gray-400 text-lg">lock</span>
                         <input type="password" id="user_password" required
-                            class="w-full pl-10 pr-4 py-3 bg-gray-50 dark:bg-white/5 border border-gray-200 dark:border-white/10 rounded-xl focus:ring-2 focus:ring-primary focus:border-transparent transition-all outline-none text-sm"
+                            class="w-full pl-10 pr-12 py-3 bg-gray-50 dark:bg-white/5 border border-gray-200 dark:border-white/10 rounded-xl focus:ring-2 focus:ring-primary focus:border-transparent transition-all outline-none text-sm dark:text-white"
                             placeholder="••••••••">
+                        <button type="button" onclick="togglePassword()" class="absolute right-3 top-3 text-gray-400 hover:text-primary transition-colors">
+                            <span class="material-symbols-outlined text-lg" id="pass_icon">visibility</span>
+                        </button>
                     </div>
                 </div>
 
                 <div class="flex items-center justify-between">
                     <label class="flex items-center gap-2 cursor-pointer">
-                        <input type="checkbox" class="rounded text-primary focus:ring-primary border-gray-300">
+                        <input type="checkbox" id="remember_me" class="rounded text-primary focus:ring-primary border-gray-300">
                         <span class="text-xs text-[#568f6c]">Lembrar-me</span>
                     </label>
-                    <a href="#" class="text-xs text-primary font-bold hover:underline">Esqueceu a senha?</a>
+                    <a href="recuperar_senha.html" class="text-xs text-primary font-bold hover:underline">Esqueceu a senha?</a>
                 </div>
 
                 <button type="submit" id="btnLogin" 
                     class="w-full bg-primary hover:bg-[#166534] text-white font-bold py-3 rounded-xl shadow-lg shadow-primary/20 transition-all flex items-center justify-center gap-2 group">
-                    <span>ENTRAR NO SISTEMA</span>
+                    <span id="btn_text">ENTRAR NO SISTEMA</span>
                     <span class="material-symbols-outlined text-lg group-hover:translate-x-1 transition-transform">login</span>
                 </button>
             </form>
         </div>
 
         <div class="bg-gray-50 dark:bg-black/20 p-4 border-t border-gray-100 dark:border-white/5 flex justify-center gap-4">
-            <button class="text-[10px] font-bold text-[#568f6c] hover:text-primary uppercase">Português</button>
-            <button class="text-[10px] font-bold text-gray-400 hover:text-primary uppercase">Español</button>
-            <button class="text-[10px] font-bold text-gray-400 hover:text-primary uppercase">English</button>
+            <button onclick="setLanguage('pt-br')" class="text-[10px] font-bold text-[#568f6c] hover:text-primary uppercase transition-colors">Português</button>
+            <button onclick="setLanguage('es')" class="text-[10px] font-bold text-gray-400 hover:text-primary uppercase transition-colors">Español</button>
+            <button onclick="setLanguage('en')" class="text-[10px] font-bold text-gray-400 hover:text-primary uppercase transition-colors">English</button>
         </div>
     </div>
 
     <script>
-        document.getElementById('loginForm').addEventListener('submit', function(e) {
-            e.preventDefault();
-            const btn = document.getElementById('btnLogin');
-            btn.innerHTML = `<span class="animate-spin material-symbols-outlined">sync</span> PROCESSANDO...`;
-            btn.classList.add('opacity-80', 'cursor-not-allowed');
-            
-            // Simulação de Loading
-            setTimeout(() => {
-                window.location.href = 'dashboard_de_gestão_administrativa.html';
-            }, 1500);
-        });
+        // 1. Função de Ver Senha
+        function togglePassword() {
+            const input = document.getElementById('user_password');
+            const icon = document.getElementById('pass_icon');
+            if (input.type === 'password') {
+                input.type = 'text';
+                icon.innerText = 'visibility_off';
+            } else {
+                input.type = 'password';
+                icon.innerText = 'visibility';
+            }
+        }
+
+        // 2. Configuração de Idioma (Base para tradução futura)
+        function setLanguage(lang) {
+            document.documentElement.lang = lang;
+            console.log(`Idioma alterado para: ${lang}`);
+            // Aqui você pode disparar uma função de i18n se desejar mudar os textos via JSON
+        }
     </script>
-<script type="module" src="js/login.js"></script>
+
+    <script type="module" src="js/login.js"></script>
 </body>
 </html>
