--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 <option value="es">ES</option>
             </select>
 
-            <a href="login.html" id="nav_login_btn" 
+            <a href="projetos/erp/login.html" id="nav_login_btn" 
                class="flex items-center gap-2 bg-primary hover:bg-blue-700 text-white px-5 py-2 rounded-full text-xs font-black uppercase tracking-widest transition-all shadow-lg shadow-primary/20">
                 <span class="material-symbols-outlined text-sm">login</span>
                 ÁREA DO CLIENTE
