--- a/projetos/login.html
+++ b/projetos/login.html
@@ -95,6 +95,6 @@
         }
     </script>
 
-    <script type="module" src="js/login.js"></script>
+    <script type="module" src="js/supabase_login.js"></script>
 </body>
 </html>
