--- a/index.html
+++ b/index.html
@@ -40,9 +40,10 @@
         .service-card:hover { border-color: #2563eb; transform: translateY(-4px); }
     </style>
 </head>
-<body class="bg-background-light dark:bg-background-dark text-[#f8fafc] dark:text-[#f8fafc] font-display transition-colors duration-300">      
+<body class="bg-background-light dark:bg-background-dark text-[#f8fafc] dark:text-[#f8fafc] font-display transition-colors duration-300">  
+    
 
-    <!-- navbar -->
+    <!-- navbar ##################################################################################################################### -->
 <nav class="fixed w-full z-50 glass border-b border-gray-200 dark:border-slate-border">
     <div class="max-w-7xl mx-auto px-4 h-16 flex items-center justify-between">
         <div class="flex items-center gap-2">
@@ -59,9 +60,10 @@
             <select id="langSelect" onchange="changeLang()" class="bg-transparent border-none text-xs font-bold uppercase cursor-pointer focus:ring-0 dark:text-white">
                 <option value="pt">PT</option>
                 <option value="es">ES</option>
+                <option value="en">EN</option>
             </select>
 
-            <a href="projetos/login.html" id="nav_login_btn" 
+            <a href="assets/login.html" id="nav_login_btn" 
                class="flex items-center gap-2 bg-primary hover:bg-blue-700 text-white px-5 py-2 rounded-full text-xs font-black uppercase tracking-widest transition-all shadow-lg shadow-primary/20">
                 <span class="material-symbols-outlined text-sm">login</span>
                 ÁREA DO CLIENTE
