--- a/assets/login.html
+++ b/assets/login.html
@@ -67,6 +67,7 @@
     
     
     <!-- Script principal do login -->
+   <script src="login/login.js"></script>
    <script src="login/login_supabase.js"></script>
 
 </body>
