--- a/assets/entidades/entidades.html
+++ b/assets/entidades/entidades.html
@@ -68,7 +68,9 @@
     </div>
 </div>
 
+<script src="validar_login.js"></script>
 <script src="db.js"></script>
+<script src="navbar.js"></script>
 <script src="app.js"></script>
 </body>
 </html>
