--- a/assets/entidades.html
+++ b/assets/entidades.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Gestão de Entidades - ERP ABP</title>
-    <link rel="stylesheet" href="entedades/style.css">
+    <link rel="stylesheet" href="entidades/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
 <body>
