--- a/assets/entidades.html
+++ b/assets/entidades.html
@@ -68,9 +68,9 @@
     </div>
 </div>
 
-<script src="entedades/validar_login.js"></script>
-<script src="entedades/db.js"></script>
-<script src=" entedades/navbar.js"></script>
-<script src="entedades/app.js"></script>
+<script src="entidades/validar_login.js"></script>
+<script src="entidades/db.js"></script>
+<script src=" entidades/navbar.js"></script>
+<script src="entidades/app.js"></script>
 </body>
 </html>
