--- a/assets/entidades.html
+++ b/assets/entidades.html
@@ -3,32 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Gestão de Entidades - ERP ABP</title>
-        <style>
-        
-}
-
-input:focus { border-color: var(--primary); outline: none; }
-
-/* Buttons */
-.btn-add {
-    background: var(--primary); color: white; border: none; padding: 15px;
-    border-radius: 6px; cursor: pointer; font-weight: bold; width: 100%; margin-top: 20px;
-}
-.btn-add:hover { background: var(--primary-hover); }
-
-/* Table & UI States */
-.table-container { background: white; border-radius: 12px; overflow-x: auto; }
-table { width: 100%; border-collapse: collapse; }
-th { background: #f8fafc; padding: 15px; text-align: left; font-size: 12px; color: var(--text-muted); }
-td { padding: 15px; border-top: 1px solid #f1f5f9; }
-
-/* Skeleton Loading placeholder */
-.skeleton { background: #e2e8f0; height: 20px; border-radius: 4px; animation: pulse 1.5s infinite; }
-@keyframes pulse { 0% { opacity: 0.6; } 50% { opacity: 1; } 100% { opacity: 0.6; } }
-
-        </style>
+    <link rel="stylesheet" href="entidades?style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-
 </head>
 <body>
 
@@ -93,5 +69,7 @@ td { padding: 15px; border-top: 1px solid #f1f5f9; }
 </div>
 
 
+<script src="db.js"></script>
+<script src="app.js"></script>
 </body>
 </html>
