--- a/assets/entidades.html
+++ b/assets/entidades.html
@@ -68,8 +68,9 @@
     </div>
 </div>
 
+<script src="entidades/navbarjs"></script>
+<script src="entidades/db.js"></script>
+<script src="entidades/app.js"></script>
 
-<script src="db.js"></script>
-<script src="app.js"></script>
 </body>
 </html>
