--- a/assets/entidades/usuarios.html
+++ b/assets/entidades/usuarios.html
@@ -10,8 +10,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.5.25/jspdf.plugin.autotable.min.js"></script>
 
     <script>
-    const SUPABASE_URL = 'https://kjhjeaiwjilkgocwvbwi.supabase.co';
-    const SUPABASE_KEY = 'sb_publishable_WP3TF2GTMMWCS1tCYzQSjA_syIKLyIX';
+    const SUPABASE_URL = 'https://luanoblszirvzqidhecr.supabase.co';
+    const SUPABASE_KEY = 'sb_publishable_jqhEnUuuEF4-zxKbgupuTQ_n-7h-qTp'; //Publishable key
     const _supabase = supabase.createClient(SUPABASE_URL, SUPABASE_KEY);
 
     async function validarAcesso() {
