--- a/assets/ususarios.html
+++ b/assets/ususarios.html
@@ -355,8 +355,10 @@
                 doc.save("entidades.pdf");
             }
         };
-
-
+<script src="navbar.js"></script>
+<script src="usuarios/load_usuarios.js"></script>
+<script src="usuarios/render_table.js"></script>
+<script src="usuarios/handle_save.js"></script>
     </script>
 </body>
 </html>
