--- a/assets/usuarios.html
+++ b/assets/usuarios.html
@@ -88,12 +88,21 @@
     <script src="verificar_login.js"></script>
     <script src="navbar.js"></script>
 
-    <script src="usuarios/load_usuarios.js"></script>
-    <script src="usuarios/render_table.js"></script>
-    <script src="usuarios/handle_save.js"></script>
-    <script src="usuarios/delete_usuario.js"></script>
-    <script src="usuarios/utils_usuarios.js"></script>
+ 
+<script src="usuarios/auth_create_user.js"></script> 
+<script src="usuarios/load_usuarios.js"></script>
+<script src="usuarios/render_table.js"></script>
+<script src="usuarios/handle_save.js"></script>
+<script src="usuarios/delete_usuario.js"></script>
+<script src="usuarios/utils_usuarios.js"></script>
 
+
+
+
+
+
+
+    
     <script>
         // Inicialização do Ciclo de Vida da Página
         window.onload = async () => {
