--- a/login.html
+++ b/login.html
@@ -71,6 +71,6 @@
 
     <script src="supabase_config.js"></script>
     <script src="login/auth_functions.js"></script>
-
+<script src="login/login_function.js"></script> 
 </body>
 </html>
