--- a/index.html
+++ b/index.html
@@ -58,31 +58,31 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <!-- End Google Tag Manager (noscript) -->
 
 <header id="componente-Header" role="banner" aria-label="Cabeçalho principal"></header>
-<script src="js/header.js"></script>
+<script src="index/js/header.js"></script>
 <script>document.addEventListener('DOMContentLoaded', criarHeader);</script>
 
 <nav id="componente-Navbar" role="navigation" aria-label="Menu de navegação principal"></nav>
-<script src="js/navbar.js"></script>
+<script src="index/js/navbar.js"></script>
 <script>document.addEventListener('DOMContentLoaded', criarNavbar);</script>
 
 <main>
 
 <section id="componente-sobre" aria-label="Seção institucional sobre Aristides Barbosa Pontes"></section>
-<script src="js/sobre.js"></script>
+<script src="index/js/sobre.js"></script>
 <script>document.addEventListener('DOMContentLoaded', criarSobre);</script>
     
 <section id="componente-servicos" aria-label="Serviços oferecidos"></section>
-<script src="js/servicos.js"></script>
+<script src="index/js/servicos.js"></script>
 <script>document.addEventListener('DOMContentLoaded', criarServicos);</script>
 
 <section id="componente-hero" aria-label="Chamada de ação principal"></section>
-<script src="js/hero.js"></script>
+<script src="index/js/hero.js"></script>
 <script>document.addEventListener('DOMContentLoaded', criarHero);</script>
     
 </main>
 
 <footer id="footer-container" role="contentinfo" aria-label="Rodapé do site"></footer>
-<script src="js/footer.js"></script>
+<script src="index/js/footer.js"></script>
 <script>document.addEventListener('DOMContentLoaded', criarFooter);</script>
 
 
