--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   <link href="https://fonts.googleapis.com/css2?family=DM+Sans&family=Gemunu+Libre:wght@200&display=swap" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.10.3/font/bootstrap-icons.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="index/css/index.css">
+  <link rel="stylesheet" href="index/index.css">
 </head>
 
 <body>
@@ -58,31 +58,31 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <!-- End Google Tag Manager (noscript) -->
 
 <header id="componente-Header" role="banner" aria-label="Cabeçalho principal"></header>
-<script src="index/js/header.js"></script>
+<script src="index/header.js"></script>
 <script>document.addEventListener('DOMContentLoaded', criarHeader);</script>
 
 <nav id="componente-Navbar" role="navigation" aria-label="Menu de navegação principal"></nav>
-<script src="index/js/navbar.js"></script>
+<script src="index/navbar.js"></script>
 <script>document.addEventListener('DOMContentLoaded', criarNavbar);</script>
 
 <main>
 
 <section id="componente-sobre" aria-label="Seção institucional sobre Aristides Barbosa Pontes"></section>
-<script src="index/js/sobre.js"></script>
+<script src="index/sobre.js"></script>
 <script>document.addEventListener('DOMContentLoaded', criarSobre);</script>
     
 <section id="componente-servicos" aria-label="Serviços oferecidos"></section>
-<script src="index/js/servicos.js"></script>
+<script src="index/servicos.js"></script>
 <script>document.addEventListener('DOMContentLoaded', criarServicos);</script>
 
 <section id="componente-hero" aria-label="Chamada de ação principal"></section>
-<script src="index/js/hero.js"></script>
+<script src="index/hero.js"></script>
 <script>document.addEventListener('DOMContentLoaded', criarHero);</script>
     
 </main>
 
 <footer id="footer-container" role="contentinfo" aria-label="Rodapé do site"></footer>
-<script src="index/js/footer.js"></script>
+<script src="index/footer.js"></script>
 <script>document.addEventListener('DOMContentLoaded', criarFooter);</script>
 
 
@@ -95,7 +95,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js" defer></script>
 
   <!-- 🧠 Prompt: Carregue o script principal do site com type="module" para suportar import/export. Use defer para não bloquear renderização. -->
-  <script src="index/js/site-mvc-main.js" type="module" defer></script>
-  <script src="index/js/index.js" defer></script>
+  <script src="index/site-mvc-main.js" type="module" defer></script>
+  <script src="index/index.js" defer></script>
 </body>
 </html>
