--- a/assets/musicas.html
+++ b/assets/musicas.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Meu MP3 Player</title>
-    <link rel="stylesheet" href="player/style.css">
+    <link rel="stylesheet" href="musicas/style.css">
 </head>
 <body>
 
@@ -22,6 +22,6 @@
             </ul>
     </div>
 
-    <script src="player/player_logic.js"></script>
+    <script src="musicas/player_logic.js"></script>
 </body>
 </html>
