--- a/assets/menu.html
+++ b/assets/menu.html
@@ -9,106 +9,11 @@
 
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 
-<!-- CONEXAO -->
-    <script>
-// Configurações do Supabase
 
-const SUPABASE_URL = 'SUA_URL_AQUI';
-const SUPABASE_KEY = 'SUA_CHAVE_ANON_AQUI';
-
-// Inicializa o cliente globalmente
-const _supabase = supabase.createClient(SUPABASE_URL, SUPABASE_KEY);
-
-/**
- * Bloqueia o acesso se não estiver logado
- */
-async function validarAcesso() {
-    const { data: { session } } = await _supabase.auth.getSession();
-
-    if (!session) {
-        // Verifica se a página está na raiz ou em subpasta para ajustar o caminho do login
-        const pathPrefix = window.location.pathname.includes('/pages/') ? '../' : '';
-        window.location.href = pathPrefix + 'login.html';
-    }
-    return session;
-}
-
-// Executa automaticamente ao carregar o script
-validarAcesso();
-
-   </script>
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-
-   <style>
-   /* Remove inconsistências de box model */
-* {
-    box-sizing: border-box;
-}
-
-/* Estilo base do corpo da página */
-body {
-    margin: 0;
-    font-family: 'Segoe UI', sans-serif;
-    background: #f1f5f9;
-    padding-top: 80px;
-}
-
-/* Container central do conteúdo */
-.content {
-    max-width: 1100px;
-    margin: auto;
-    padding: 20px;
-}
-
-/* Grade responsiva dos cards */
-.grid {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
-    gap: 20px;
-    margin-top: 20px;
-}
-
-/* Estilo dos cards clicáveis */
-.card {
-    background: white;
-    padding: 30px;
-    border-radius: 12px;
-    text-decoration: none;
-    color: #334155;
-    text-align: center;
-    border: 1px solid #e2e8f0;
-    transition: 0.3s;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
-/* Efeito visual ao passar o mouse */
-.card:hover {
-    transform: translateY(-5px);
-    border-color: #3ecf8e;
-    box-shadow: 0 10px 20px rgba(0,0,0,0.05);
-}
-
-/* Ícones dos cards */
-.card i {
-    font-size: 45px;
-    color: #3ecf8e;
-    margin-bottom: 15px;
-}
-
-/* Título dos cards */
-.card h3 {
-    margin: 10px 0;
-}
-
-/* Texto auxiliar dos cards */
-.card p {
-    font-size: 0.9em;
-    color: #64748b;
-}
-   </style>
+ <link rel="stylesheet" href="menu/style.css">
+ 
 </head>
 <body>
 
@@ -146,35 +51,10 @@ body {
         
     </div>
 
-<script src="js/navbar.js"></script>
+<script src="navbar.js"></script>
+<script src="supabase_config.js"></script>    
+<script src="verifica_login.js"></script>
 
-<script>
-// URL do projeto Supabase
-const SUPABASE_URL = 'https://kjhjeaiwjilkgocwvbwi.supabase.co';
-
-// Chave pública (publishable) para uso no frontend
-const SUPABASE_KEY = 'sb_publishable_WP3TF2GTMMWCS1tCYzQSjA_syIKLyIX';
-
-// Cria o cliente Supabase
-const _supabase = supabase.createClient(SUPABASE_URL, SUPABASE_KEY);
-
-// Função responsável por verificar se o usuário está autenticado
-async function checkUser() {
-    // Obtém a sessão atual
-    const { data: { session } } = await _supabase.auth.getSession();
-
-    // Se não existir sessão, redireciona para o login
-    if (!session) {
-        window.location.href = 'login.html';
-    }
-}
-
-// Executa a verificação após o carregamento da página
-document.addEventListener('DOMContentLoaded', () => {
-    checkUser();
-});
-
-</script>
 
 </body>
 </html>
