--- a/assets/menu.html
+++ b/assets/menu.html
@@ -42,6 +42,11 @@
                  </a>
 
 
+             <a href="musicas.html" class="card">
+                <i class="fas fa-sticky-note"></i>
+                <h3>MUSICAS</h3>
+                 </a>
+
             
         </div>        
     </div>
