--- a/assets/login.html
+++ b/assets/login.html
@@ -7,14 +7,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://unpkg.com/@supabase/supabase-js@2"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
-    <style>
-        body { font-family: 'Inter', sans-serif; }
-        .glass {
-            background: rgba(15, 23, 42, 0.8);
-            backdrop-filter: blur(10px);
-            border: 1px solid rgba(255, 255, 255, 0.1);
-        }
-    </style>
+       <link href="login/style.css" rel="stylesheet">
 </head>
 <body class="bg-slate-950 text-white flex items-center justify-center min-h-screen p-4">
 
@@ -23,12 +16,12 @@
             <h1 class="text-3xl font-black tracking-tighter text-blue-500">ERP ABP</h1>
             <p class="text-slate-400 text-sm">Acesse sua conta para gerenciar seus PDFs</p>
         </div>
-
+<!--
         <button onclick="loginComGoogle()" class="w-full py-3 mb-6 bg-white text-black font-bold rounded-xl flex items-center justify-center gap-2 hover:bg-slate-200 transition-all">
             <img src="https://www.google.com/favicon.ico" class="w-4 h-4" alt="Google icon"> 
             Entrar com Gmail
         </button>
-
+-->
         <div class="relative mb-6 text-center border-b border-slate-800">
             <span class="absolute top-[-10px] left-1/2 -translate-x-1/2 bg-slate-950 px-2 text-xs text-slate-500 uppercase tracking-widest">ou e-mail</span>
         </div>
