--- a/assets/bloco_de_notas.html
+++ b/assets/bloco_de_notas.html
@@ -41,5 +41,6 @@
     <script src="navbar.js"></script>
     <script src="supabase_config.js"></script>
     <script src="verificar_login.js"></script>
+     <script src="script_antigo.js"></script>
 </body>
 </html>
