--- a/assets/bloco_de_notas.html
+++ b/assets/bloco_de_notas.html
@@ -41,6 +41,6 @@
     <script src="navbar.js"></script>
     <script src="supabase_config.js"></script>
     <script src="verificar_login.js"></script>
-     <script src="script_antigo.js"></script>
+     <script src="bloco_de_notas/script_antigo.js"></script>
 </body>
 </html>
