--- a/assets/entidades.html
+++ b/assets/entidades.html
@@ -10,19 +10,13 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.5.25/jspdf.plugin.autotable.min.js"></script>
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-        <link rel="stylesheet" href="entidades/style.css">
+    <link rel="stylesheet" href="entidades/style.css">
 
    
 </head>
 <body>
 
-<div class="navbar">
-    <div style="font-weight: bold; color: #0f172a;">ERP ABP - ENTIDADES</div>
-    <div class="nav-buttons">
-        <a href="index.html" class="btn-nav-back"><i class="fas fa-home"></i> Voltar</a>
-        <button class="btn-logout-nav" onclick="sairDaConta()"><i class="fas fa-sign-out-alt"></i> Sair</button>
-    </div>
-</div>
+
 
 <div class="container">
     <div class="card">
@@ -122,6 +116,8 @@
     </div>
 </div>
 
-
+    <script src="navbar.js"></script>
+       <script src="supabase_config.js"></script>
+       <script src="verificar_login.js"></script>
 </body>
 </html>
