--- a/assets/entidades.html
+++ b/assets/entidades.html
@@ -119,5 +119,6 @@
     <script src="navbar.js"></script>
        <script src="supabase_config.js"></script>
        <script src="verificar_login.js"></script>
+          <script src="entidades.js"></script>
 </body>
 </html>
