--- a/assets/entidades.html
+++ b/assets/entidades.html
@@ -119,6 +119,9 @@
     <script src="navbar.js"></script>
        <script src="supabase_config.js"></script>
        <script src="verificar_login.js"></script>
-          <script src="entidades/entidades.js"></script>
+         <script src="entidades/listar.js"></script>
+<script src="entidades/cadastrar.js"></script>
+<script src="entidades/editar.js"></script>
+<script src="entidades/deletar.js"></script>
 </body>
 </html>
