--- a/assets/financeiro.html
+++ b/assets/financeiro.html
@@ -10,8 +10,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.5.25/jspdf.plugin.autotable.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     
-    <link rel="stylesheet" href="css/financerio.css">
-    <script src="js/financeiro.js" defer></script>
+    <link rel="stylesheet" href="financeiro/financerio.css">
+  
 </head>
 <body>
 
@@ -96,6 +96,12 @@
         </table>
     </div>
 </div>
-
+<script src="navbar.js"></script>     
+<script src="supabase_config.js"></script> 
+<script src="verificar_login.js"></script> 
+<script src="financeiro/autolimpeza_fin.js"></script>
+<script src="financeiro/listar_financeiro.js"></script>
+<script src="financeiro/cadastrar_financeiro.js"></script>
+<script src="financeiro/deletar_financeiro.js"></script>
 </body>
 </html>
