--- a/assets/app/BKPs/index.html
+++ b/assets/app/BKPs/index.html
@@ -63,16 +63,43 @@
 </div>
 <!-- TextGrid / Navigation Hub -->
 <div class="grid grid-cols-2 gap-4">
-<!-- Home -->
+
+
+
+<!-- TAREFAS -->
 <div class="flex flex-col gap-3 rounded-xl border border-[#dbe0e6] dark:border-gray-800 bg-white dark:bg-gray-900 p-5 shadow-sm active:scale-95 transition-transform cursor-pointer">
 <div class="text-primary bg-primary/10 w-fit p-3 rounded-lg">
 <span class="material-symbols-outlined text-3xl">home</span>
 </div>
 <div class="flex flex-col gap-1">
-<h2 class="text-[#111418] dark:text-white text-base font-bold leading-tight">Home</h2>
-<p class="text-[#617589] dark:text-gray-400 text-xs font-normal leading-normal">Painel Geral</p>
+<h2 class="text-[#111418] dark:text-white text-base font-bold leading-tight">Tarefas</h2>
+<p class="text-[#617589] dark:text-gray-400 text-xs font-normal leading-normal">Pedidos e Tarefas</p>
 </div>
 </div>
+
+
+<!-- Entidades -->
+<div class="flex flex-col gap-3 rounded-xl border border-[#dbe0e6] dark:border-gray-800 bg-white dark:bg-gray-900 p-5 shadow-sm active:scale-95 transition-transform cursor-pointer">
+<div class="text-primary bg-primary/10 w-fit p-3 rounded-lg">
+<span class="material-symbols-outlined text-3xl">inventory_2</span>
+</div>
+<div class="flex flex-col gap-1">
+<h2 class="text-[#111418] dark:text-white text-base font-bold leading-tight">Entidades</h2>
+<p class="text-[#617589] dark:text-gray-400 text-xs font-normal leading-normal">Clientes/ Funcionários/ Fornecedores</p>
+</div>
+</div>
+
+<!-- Financeiro -->
+<div class="flex flex-col gap-3 rounded-xl border border-[#dbe0e6] dark:border-gray-800 bg-white dark:bg-gray-900 p-5 shadow-sm active:scale-95 transition-transform cursor-pointer">
+<div class="text-primary bg-primary/10 w-fit p-3 rounded-lg">
+<span class="material-symbols-outlined text-3xl">inventory_2</span>
+</div>
+<div class="flex flex-col gap-1">
+<h2 class="text-[#111418] dark:text-white text-base font-bold leading-tight">Financerio</h2>
+<p class="text-[#617589] dark:text-gray-400 text-xs font-normal leading-normal">Contas a Pagar/Receber</p>
+</div>
+</div>
+
 <!-- Contas -->
 <div class="flex flex-col gap-3 rounded-xl border border-[#dbe0e6] dark:border-gray-800 bg-white dark:bg-gray-900 p-5 shadow-sm active:scale-95 transition-transform cursor-pointer">
 <div class="text-primary bg-primary/10 w-fit p-3 rounded-lg">
@@ -80,9 +107,10 @@
 </div>
 <div class="flex flex-col gap-1">
 <h2 class="text-[#111418] dark:text-white text-base font-bold leading-tight">Contas</h2>
-<p class="text-[#617589] dark:text-gray-400 text-xs font-normal leading-normal">Gestão Financeira</p>
+<p class="text-[#617589] dark:text-gray-400 text-xs font-normal leading-normal">Contas bancárias</p>
 </div>
 </div>
+
 <!-- Produtos -->
 <div class="flex flex-col gap-3 rounded-xl border border-[#dbe0e6] dark:border-gray-800 bg-white dark:bg-gray-900 p-5 shadow-sm active:scale-95 transition-transform cursor-pointer">
 <div class="text-primary bg-primary/10 w-fit p-3 rounded-lg">
@@ -93,6 +121,7 @@
 <p class="text-[#617589] dark:text-gray-400 text-xs font-normal leading-normal">Estoque</p>
 </div>
 </div>
+
 <!-- PDV -->
 <div class="flex flex-col gap-3 rounded-xl border border-[#dbe0e6] dark:border-gray-800 bg-white dark:bg-gray-900 p-5 shadow-sm active:scale-95 transition-transform cursor-pointer">
 <div class="text-primary bg-primary/10 w-fit p-3 rounded-lg">
@@ -103,6 +132,8 @@
 <p class="text-[#617589] dark:text-gray-400 text-xs font-normal leading-normal">Ponto de Venda</p>
 </div>
 </div>
+
+
 <!-- Gerenciar Vendas -->
 <div class="flex flex-col gap-3 rounded-xl border border-[#dbe0e6] dark:border-gray-800 bg-white dark:bg-gray-900 p-5 shadow-sm active:scale-95 transition-transform cursor-pointer">
 <div class="text-primary bg-primary/10 w-fit p-3 rounded-lg">
@@ -113,6 +144,8 @@
 <p class="text-[#617589] dark:text-gray-400 text-xs font-normal leading-normal">Gerenciamento</p>
 </div>
 </div>
+
+
 <!-- E-commerce -->
 <div class="flex flex-col gap-3 rounded-xl border border-[#dbe0e6] dark:border-gray-800 bg-white dark:bg-gray-900 p-5 shadow-sm active:scale-95 transition-transform cursor-pointer">
 <div class="text-primary bg-primary/10 w-fit p-3 rounded-lg">
@@ -123,6 +156,8 @@
 <p class="text-[#617589] dark:text-gray-400 text-xs font-normal leading-normal">Loja Online</p>
 </div>
 </div>
+
+
 <!-- Ajustes (Full width at bottom for visual balance if desired, or keep in grid) -->
 <div class="col-span-2 flex items-center gap-4 rounded-xl border border-[#dbe0e6] dark:border-gray-800 bg-white dark:bg-gray-900 p-5 shadow-sm active:scale-[0.98] transition-transform cursor-pointer">
 <div class="text-primary bg-primary/10 p-3 rounded-lg">
@@ -138,6 +173,8 @@
 </div>
 </div>
 </main>
+
+
 <!-- Footer Actions -->
 <footer class="mt-auto pb-8">
 <!-- SingleButton for Logout -->
@@ -147,6 +184,8 @@
 <span class="truncate">Sair da Conta</span>
 </button>
 </div>
+
+
 <!-- MetaText -->
 <div class="px-4">
 <p class="text-[#617589] dark:text-gray-500 text-xs font-normal leading-normal text-center">Versão 2.4.0 • Enterprise Edition</p>
@@ -155,4 +194,7 @@
 <!-- Safe Area Spacer for iOS -->
 <div class="h-6 bg-transparent"></div>
 </div>
-</body></html>
+
+
+</body>
+</html>
